--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -41,6 +41,7 @@ en:
       update_comment: 'Changes saved'
       destroy_comment: 'You comment has been deleted'
     edit_comment: 'Edit comment'
+    in_reply_to: "In reply to <strong>{{name}}</strong>:"
 
   navbar:
     search_placeholder: 'Search for groups or threads'
@@ -53,6 +54,7 @@ en:
     motion_closed_by_expiry: "Proposal has closed"
     new_vote: "%{position} on the proposal"
     new_comment: "commented on the discussion"
+    comment_replied_to: "{{name}} replied to your comment in the discussion {{title}}"
     comment_liked: "liked your comment in the discussion"
     user_mentioned: "mentioned you in a comment in"
     membership_requested: "requested membership to"
