--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -48,22 +48,22 @@ en:
 
   notifications:
     header: "Notifications"
-    new_discussion: "started a discussion"
-    new_motion: "created a proposal"
-    motion_closed_by_user: "closed the proposal"
-    motion_closed_by_expiry: "Proposal has closed"
-    new_vote: "%{position} on the proposal"
-    new_comment: "commented on the discussion"
-    comment_replied_to: "{{name}} replied to your comment in the discussion {{title}}"
-    comment_liked: "liked your comment in the discussion"
-    user_mentioned: "mentioned you in a comment in"
-    membership_requested: "requested membership to"
-    membership_request_approved: 'approved your request to join'
-    user_added_to_group: "added you to the group"
-    motion_closing_soon: "Proposal is closing soon"
-    motion_blocked: "blocked the proposal"
-    motion_outcome_created: "published an outcome for the proposal"
-    motion_outcome_updated: "updated the outcome for the proposal"
+    new_discussion: "{{name}} started a discussion {{discussion}}"
+    new_motion: "{{name}} created a proposal {{proposal}}"
+    motion_closed_by_user: "{{name}} closed the proposal {{proposal}}"
+    motion_closed_by_expiry: "Proposal has closed {{proposal}}"
+    new_vote: "{{name}} {{position}} on the proposal {{proposal}}"
+    new_comment: "{{name}} commented on the discussion {{discussion}}"
+    comment_replied_to: "{{name}} replied to your comment in the discussion {{discussion}}"
+    comment_liked: "{{name}} liked your comment in the discussion {{discussion}}"
+    user_mentioned: "{{name}} mentioned you in a comment in {{discussion}}"
+    membership_requested: "{{name}} requested membership to {{group}}"
+    membership_request_approved: '{{name}} approved your request to join {{group}}'
+    user_added_to_group: "{{name}} added you to the group {{group}}"
+    motion_closing_soon: "Proposal is closing soon: {{proposal}}"
+    motion_blocked: "{{name}} blocked the proposal {{proposal}}"
+    motion_outcome_created: "{{name}} published an outcome for the proposal {{proposal}}"
+    motion_outcome_updated: "{{name}} updated the outcome for the proposal {{proposal}}"
 
   vote_form:
     have_your_say: 'Have your say'
