--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -48,22 +48,22 @@ en:
 
   notifications:
     header: "Notifications"
-    new_discussion: "{{name}} started a discussion {{discussion}}"
-    new_motion: "{{name}} created a proposal {{proposal}}"
-    motion_closed_by_user: "{{name}} closed the proposal {{proposal}}"
+    new_discussion: "<strong>{{name}}</strong> started a discussion {{discussion}}"
+    new_motion: "<strong>{{name}}</strong> created a proposal {{proposal}}"
+    motion_closed_by_user: "<strong>{{name}}</strong> closed the proposal {{proposal}}"
     motion_closed_by_expiry: "Proposal has closed {{proposal}}"
-    new_vote: "{{name}} {{position}} on the proposal {{proposal}}"
-    new_comment: "{{name}} commented on the discussion {{discussion}}"
-    comment_replied_to: "{{name}} replied to your comment in the discussion {{discussion}}"
-    comment_liked: "{{name}} liked your comment in the discussion {{discussion}}"
-    user_mentioned: "{{name}} mentioned you in a comment in {{discussion}}"
-    membership_requested: "{{name}} requested membership to {{group}}"
-    membership_request_approved: '{{name}} approved your request to join {{group}}'
-    user_added_to_group: "{{name}} added you to the group {{group}}"
+    new_vote: "<strong>{{name}}</strong> {{position}} on the proposal {{proposal}}"
+    new_comment: "<strong>{{name}}</strong> commented on the discussion {{discussion}}"
+    comment_replied_to: "<strong>{{name}}</strong> replied to your comment in the discussion {{discussion}}"
+    comment_liked: "<strong>{{name}}</strong> liked your comment in the discussion {{discussion}}"
+    user_mentioned: "<strong>{{name}}</strong> mentioned you in a comment in {{discussion}}"
+    membership_requested: "<strong>{{name}}</strong> requested membership to {{group}}"
+    membership_request_approved: '<strong>{{name}}</strong> approved your request to join {{group}}'
+    user_added_to_group: "<strong>{{name}}</strong> added you to the group {{group}}"
     motion_closing_soon: "Proposal is closing soon: {{proposal}}"
-    motion_blocked: "{{name}} blocked the proposal {{proposal}}"
-    motion_outcome_created: "{{name}} published an outcome for the proposal {{proposal}}"
-    motion_outcome_updated: "{{name}} updated the outcome for the proposal {{proposal}}"
+    motion_blocked: "<strong>{{name}}</strong> blocked the proposal {{proposal}}"
+    motion_outcome_created: "<strong>{{name}}</strong> published an outcome for the proposal {{proposal}}"
+    motion_outcome_updated: "<strong>{{name}}</strong> updated the outcome for the proposal {{proposal}}"
 
   vote_form:
     have_your_say: 'Have your say'
