Squashed commit of the following:
commit 0bf2432c4ccf21519c374d0a6b0eca803321d46a
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Tue Jan 27 14:34:01 2015 +1300

    Clean up naming conventions

commit 8a7fb127b6b1355d7fb8a6b0444b6fb541a1db8f
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Mon Jan 19 15:50:23 2015 +1300

    Push search result construction to search vector

commit 1d4ea20f613d1c5fb7245932db18f26b0d438956
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Mon Jan 19 15:49:45 2015 +1300

    Add indices to search vectors

commit 6c2a3bddd6e91bf88546803e8db4a6765f95b894
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Mon Jan 12 14:36:09 2015 +1300

    Fix failing searchable specs

commit 3af6528dcec767ffa62680aa5f3ecb4326795216
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Mon Jan 12 14:02:06 2015 +1300

    Add visible comments query, solidify controller tests

commit 519ba16c0bc6d7c5472aa8a8ccad84382e21e4bb
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Fri Jan 9 16:33:27 2015 +1300

    Spruce up discussion/proposal displays a little

commit 5e6abd842291b4b5366db9ddea2b6e2f90e604fc
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Fri Jan 9 14:47:34 2015 +1300

    Allow rebuild of search index

commit 96e467e2b1dc4ba883d348cded2653678cba3f34
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Fri Jan 9 14:47:29 2015 +1300

    Split search results into categories on frontend

commit e18e4905ec5da88c1e1771c2fa37704550332c6f
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Fri Jan 9 12:52:52 2015 +1300

    Use start_with search by default

commit 3042e939a4adaf6d41c8fc2b547110f661680ace
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Fri Jan 9 12:43:22 2015 +1300

    Add base class for search vectors for querying

commit 314ac25368079cde0ebb843cb4db869d39e33d15
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Fri Jan 9 10:57:45 2015 +1300

    Mildly hacky solution for returning search resu

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -43,7 +43,13 @@ en:
     edit_comment: 'Edit comment'
 
   navbar:
-    search_placeholder: 'Search for groups or threads'
+    search:
+      placeholder: 'Search for groups or threads'
+      loading: 'Loading results...'
+      discussions: 'Threads'
+      proposals: 'Proposals'
+      comments: 'Comments'
+      no_results: 'No results found'
 
   notifications:
     header: "Notifications"
