--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -132,6 +132,7 @@ ru:
     members_added: Участники добавлены в группу.
     membership_requested: "Вы послали запрос на вступление в %{which_group}. Вы получите уведомление когда он будет удовлетворен."
     motion_closed: Предложение закрыто. Вы можете установить результаты и отослать их в свою группу.
+    motion_outcome_updated: Результаты обновлены.
     password_updated: Пароль был успешно изменен
     position_submitted: Позиция добавлена
     position_updated: Позиция обновлена.
@@ -214,6 +215,7 @@ ru:
     comment_liked: понравился ваш комментарий в обсуждении
     user_mentioned: упоминание о вас в комментарии
     membership_requested: запрошено участие в
+    membership_request_approved: удовлетворил ваш запрос
     user_added_to_group: добавил вас в группу
     motion_closing_soon: Предложение скоро закрывается
     motion_blocked: блокировал предложение
@@ -260,6 +262,7 @@ ru:
     members_can:
       add_members: Пригласите новых участников
       edit_comments: Редактировать свои коментарии
+      edit_discussions: Менять описание любого обсуждения в группе
       start_discussions: Создавать обсуждения
       raise_motions: Создавать предложения
       vote: Голосовать
@@ -278,12 +281,31 @@ ru:
       approval_html: "По запросу <span>любой может запросить участие</span>"
       invitation_html: "По приглашениям <span>новые участники должны быть приглашены</span>"
     parent_members_can_see_discussions:
+      label: Безопасность
       "false": Только участники могут видеть обсуждения
+    discussion_privacy_options:
+      label: Кто может видеть обсуждение?
+      hint: Публичные обсуждения могут видеть все.
+      public_only_html: Только публичные обсуждения
+      public_or_private_html: Разрешить публичные и закрытые обсуждения
+      private_only_html: Только закрытые обсуждения
+    learn_about_permissions: Подробнее о безопасности
   group_permissions:
     header: Разрешения
+    coordinators_can: "Координаторы могут:"
+    c1: Менять настройки группы
+    c2: Менять название и описание обсуждений.
+    c3: Перемещать обсуждения между группами.
+    c4: Приглашать и утверждать участников.
+    c5: Рассылать уведомления участникам.
+    c6: Деактивировать группу.
     c7: Добавлять/удалять координаторов.
     c8: Удалять дискуссии.
     c9: Удалять комментарии.
+    c10: Создавать подгруппы.
+    c11: Начинать обсуждения.
+    c12: Создавать предложения.
+    c13: Голосовать.
   group_privacy:
     visible_to:
       members: Скрытая группа. Видна только участникам.
