translation update (Aragonese, Slovenian, Russian, Swedish)

--- a/config/locales/frontpage.sl.yml
+++ b/config/locales/frontpage.sl.yml
@@ -8,10 +8,10 @@ sl:
       contact: Kontakt
       donate: Prispevajte še danes
       press: Mediji
-      try_it: Preizkusite
+      try_it: Preizkusi
       log_in: Prijava
       video: "Več o tem, kako Loomio deluje"
-      try_loomio_beta: Preizkusite Loomio beta
+      try_loomio_beta: Preizkusi Loomio beta
       check_out_loomio_beta: Preizkusi Loomio beta
       more: Več
       top: Nazaj na vrh
