--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -67,6 +67,7 @@ ru:
     permission_to_invite: У вас недостаточно прав для приглашения новых участников.
     position_not_updated: Невозможно изменить этот пункт
     settings_not_updated: Ваши настройки не обновлены
+    group_request_already_accepted: "Извените! Это приглашение не верно или было уже принято"
     group_private_or_not_found: "Группа не найдена.\n\nОна может быть приватной. Попросите того, кто дал вам ссылку на нее выслать вам приглашение."
     group_already_setup: Такая группа уже существует.
     passwords_did_not_match: Пароли не совпадают
@@ -74,11 +75,12 @@ ru:
     user_with_email_address_already_in_group: Этот пользователь уже является участником группы.
     you_have_already_requested_membership: Вы уже запрашивали участие в этой группе.
     you_are_already_a_member_of_this_group: Вы уже член этих группи
-    not_found: Пункт не нашил. Он вычеркнул.
+    not_found: Пункт не найден. Возможно он был удален.
   alert:
     duplicate_email: "%{which_email} уже в группе. "
   notice:
     admin_rights_removed: "Пользователь %{which_user} был лишен прав координатора. "
+    user_added: "%{user_email_or_name} был добавлен к группе."
     member_removed: "Участник удален. "
     membership_approved: "Участие подтверждено. "
     membership_request_canceled: Заявка на участие отклонена.
@@ -246,6 +248,7 @@ ru:
     header: "Войдите, или вступите в группу для участия"
   prompt_user_to_join:
     header: Присоединитесь к группе
+    body: "Для того чтобы иметь возможность комментировать или голосовать, вы должны быть членом этой группы."
   user_profile:
     back: Вернуться к профилю
     change_password: Измените пароль
@@ -254,10 +257,12 @@ ru:
     confirm_account_deactivation: Вы уверены?
     deactivation:
       title: Деактивация учетной записи
+      only_coordinator: "Группа должна  иметь как минимум одного координатора. Вы сейчас единственный координатор следующих груп:"
   group_form:
     name: Название группы
     description: Описание
     category: Категория
+    confirm_all_discussions_will_be_made_private_message: "Если вы продолжите, все публичные дискуссии будут сделаны приватными."
     what_can_members_do: "Участники могут:"
     members_can:
       add_members: Пригласите новых участников
@@ -310,6 +315,7 @@ ru:
     visible_to:
       members: Скрытая группа. Видна только участникам.
   setup_steps_title: "Следующие шаги:"
+  setup_step_1: Ознакомтесь с примером обсуждения
   setup_step_2: Начните ваше первое обсуждение
   setup_step_3: Пригласите людей в вашу группу
   invite_people: Пригласите людей
@@ -351,6 +357,7 @@ ru:
   request_membership: Запросить участие
   ask_to_join_group: Подать заявку на вступление
   confirm_remove_membership_request: Вы уверены что хотите отменить заявку на участие в это группе?
+  no_pending_membership_requests: Сейчас нет запросов на участие в этой группе.
   subgroups: Подгруппы
   create_a_subgroup: Создать подгруппу
   select_members_to_add: "Выбрать участников для добавления в %{which_group}"
@@ -360,6 +367,7 @@ ru:
   create_subgroup: Создать подгруппу
   creating_subgroup: Создание подгруппы
   hidden: Скрытый
+  public: Публичная
   new_group: Новая группа
   create_group: Создать группу
   creating_group: Создание группы
@@ -375,6 +383,8 @@ ru:
       click_to_follow: Отслеживать группу
       click_to_unfollow: Не отслеживать группу
   group_request:
+    beta_request_header: "Создайте новую группу на Loomio!"
+    beta_request_description: "Чтобы начать принимать решения на Loomio, нужно сначала создать группу"
     please_select_an_option: "Пожалуйста, выберите вариант"
     confirmation:
       title: "Почти готово! Проверьте почту."
@@ -398,6 +408,7 @@ ru:
   create_new_proposal: Создать предложение
   empty_decision_index: Эта группа пока не приняла никаких решений.
   empty_discussion_list: В этой дискуссии пока не было активности.
+  comment_by: "Комментарий %{comment_author}"
   discussion_list:
     clear_filters: "Сбросить фильтр: все обсуждения"
     filter_unread:
@@ -408,7 +419,7 @@ ru:
     click_to_follow: Отслеживать обсуждение
     click_to_unfollow: Не отслеживать обсуждение
   description_history:
-    header: История
+    header: История изменений
     subheader: Версия
     edited_by: "Редактировал примерно %{when} назад %{who}"
     current: (текущее)
@@ -435,10 +446,25 @@ ru:
   proposal: Предложение
   yes_position: Я согласен
   yes_details: "Я согласен с этим и с тем, что из этого следует"
+  abstain_position: Я воздерживаюсь
+  abstain_details: "Я был бы рад, если группа примет решение без меня."
   no_position: Я не соласен
   block_position: Я блокирую
   not_voted: "[Показать членов группы, которые ещё не определились]"
+  outcome_placeholder: Каков результат предложения?
+  outcome_submit: Опубликовать результат
+  position_verbs:
+    "yes": согласен
+    "no": не согласен
+    abstain: воздерживаюсь
+    block: блокирую
+    past_tense:
+      "yes": согласовано
+      "no": не согласовано
+      abstain: воздержано
+      block: блокировано
   edit_comment:
+    comment_changes: комментарий изменен
     edit_comment: Редактировать коментарий
   help:
     getting_started: С чего начать
